--- a/css/styles.css
+++ b/css/styles.css
@@ -101,8 +101,16 @@ html {
 body {
   font-family: "Muli", sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 1rem;
   text-align: center; }
+
+h1 {
+  font-size: 1.5rem;
+  line-height: 2rem; }
+
+h2 {
+  font-size: 1.1rem; }
 
 /*---------HEADER-----------*/
 header {
@@ -115,7 +123,7 @@ header {
     left: 0;
     right: 0;
     margin: auto;
-    font-size: 1rem;
+    color: purple;
     padding: .5rem; }
   header .slogan h2 {
     width: 80%;
@@ -126,10 +134,11 @@ header {
     margin: 0 1rem; }
   header .slogan {
     color: red;
-    margin: 1rem 2%;
+    margin: 1rem auto;
     position: relative;
     font-style: italic;
-    font-size: .8rem; }
+    font-size: .8rem;
+    width: 80%; }
   header .slogan::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
@@ -201,6 +210,25 @@ nav {
   nav .effect_active {
     transform: scale3d(70, 70, 70);
     opacity: 1; }
+
+/*------------------Main ----------------*/
+main {
+  width: 90%;
+  margin: 1rem auto; }
+
+.container figure {
+  width: 90%;
+  margin: .5rem auto; }
+  .container figure img {
+    width: 100%; }
+
+/*-------------MATERIALS---------------*/
+.material ul li {
+  list-style: none; }
+
+.material ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
 
 /*--------------Footer-----------------*/
 footer {
