--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
-$primaryColor: #66b9bf;
-$secondaryColor: #fedcd2;
-$lemonColor:#dcb239;
-$fontColor: #827775;
+$primaryColor: #8cbf40;
+$secondaryColor: #fa7c92;
+$yellowColor:#fff7c0;
+$fontColor: whitesmoke;
 
 
 $defaultFont: 'Muli', sans-serif;
