--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -30,7 +30,7 @@ header{
         left:0;
         right:0;
         margin:auto;
-        color:purple;
+        color:darken($color: $primaryColor, $amount: 50%);
         padding: .5rem;
         
     }
@@ -77,6 +77,7 @@ nav {
    position:fixed;
    width:100%;
    z-index: 2;
+   background-color: $primaryColor; 
     .menuIcon{
         cursor:pointer;
         position:relative;
@@ -85,7 +86,7 @@ nav {
     .menuIcon div{
         width: 1.34rem;
         height:.2rem;
-        background-color:purple; 
+        background-color:rgba(49, 68, 20, 1); 
         margin: .2rem;
         transition: .2s;
     }
@@ -98,18 +99,19 @@ nav {
     .menuList ul li{
         list-style:none;
         padding: .5rem 0;
-        color:coral;
+        color:white;
+        background-color: $primaryColor;
     }
     .menuList{
         position: relative;
         opacity:0;
         overflow: hidden;
-        // display:none;
+        display:none;
         transition: cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     //used to show menuList
     .show{
-        // display: block;
+        display: block;
         opacity: 1;
     }
 
@@ -131,7 +133,7 @@ nav {
     .effect{
         width: 10px;
         height: 10px;
-        background-color: purple;
+        background-color: rgba(140,191,64,.3);
         border-radius: 50%;
         position: absolute;
         left: 50%;
@@ -148,18 +150,37 @@ nav {
 }
 /*------------------Main ----------------*/
 main{
-    width: 90%;
+    width: 100%;
     margin: 1rem auto;
+   
+}
+section{
+    margin: 0 auto;
+    padding: 1rem 0;
+}
+section:first-child{    
+    background-color: lighten($color: $primaryColor, $amount: 20%);
+}
+section:nth-child(2){
+    background-color: lighten($color: $primaryColor, $amount: 10%);
+}
+.container p{
+    width:90%;
+    margin: .5rem auto;
 }
 .container figure{
-    width: 90%;
+    width: 100%;
     margin: .5rem auto;
     img{
         width:100%;
     }
 }
 
+
 /*-------------MATERIALS---------------*/
+.teachWhat .mainType{
+    width: 80%;
+}
 .material ul li{
     list-style: none;
 }
