--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -7,7 +7,7 @@ html{-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%};
 body{
     font-family: $defaultFont;
     font-weight: $normalWeight;
-    font-size: 16px;
+    font-size: .9rem;
     line-height: 1rem;
     text-align:center;
 }
@@ -20,196 +20,124 @@ h2{
 }
 /*---------HEADER-----------*/
 header{
-    position: relative;
-    top:3rem;
-    figure img{
+    .banner{
+        margin-top: 50px;
+    }
+    .banner img{
         width:100%;
-    }
-    h1{
-        text-transform: uppercase;
-        left:0;
-        right:0;
-        margin:auto;
-        color:darken($color: $primaryColor, $amount: 50%);
-        padding: .5rem;
-        
-    }
-    .slogan h2{
-        width: 80%;
-        margin: 1rem auto;
-    }
-    .slogan h4{
-        text-align: right;
-        padding: 0 1rem;
-        margin: 0 1rem;
-    }
-    .slogan{
-        color:red;
-        margin: 1rem auto;
-        position: relative;
-        font-style: italic;
-        font-size: .8rem;
-        width: 80%;
-    }
-    .slogan::before{
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
-        content: "\f10d";
-        font-size:.8rem;
-        line-height: 0.1em;
-        position: absolute;
-        left: 2%;
-
-    }
-    .slogan::after{
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
-        content: "\f10e";
-        font-size: .8rem;
-        line-height: 0.1em;
-        position: absolute;
-        right: 2%;
-
     }
 }
 /*-----------NAV-----------------*/
-nav {
-   position:fixed;
-   width:100%;
-   z-index: 2;
-   background-color: $primaryColor; 
-    .menuIcon{
-        cursor:pointer;
-        position:relative;
-        text-align: right;
-    }
-    .menuIcon div{
-        width: 1.34rem;
-        height:.2rem;
-        background-color:rgba(49, 68, 20, 1); 
-        margin: .2rem;
-        transition: .2s;
-    }
-    .menuIcon div:nth-child(1){
-        transform-origin: 0% 0%;
-    }
-    .menuIcon div:nth-child(3){
-        transform-origin: 0% 100%;
-    }
-    .menuList ul li{
-        list-style:none;
-        padding: .5rem 0;
-        color:white;
-        background-color: $primaryColor;
-    }
-    .menuList{
-        position: relative;
-        opacity:0;
-        overflow: hidden;
-        display:none;
-        transition: cubic-bezier(0.075, 0.82, 0.165, 1);
-    }
-    //used to show menuList
-    .show{
-        display: block;
-        opacity: 1;
-    }
-
-    //used to change iconMenu while menuList showed
-    .closeIcon1{
-        transform: rotate(45deg) translate(-2px, -1px);
-        background-color:coral !important;
-      }
-      .closeIcon2{
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-      }
-      .closeIcon3{
-        transform: rotate(-45deg) translate(0, -1px);
-        background-color:coral !important;
-      }
-
-    //color layer effect for MenuList
-    .effect{
-        width: 10px;
-        height: 10px;
-        background-color: rgba(140,191,64,.3);
-        border-radius: 50%;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%) scale3d(1, 1, 1);
-        transition: all 500ms cubic-bezier(0.4, 0.0, 0.2, 1)!important;
-        opacity: 0;
-        z-index: -1;
-    }
-    .effect_active{
-        transform: scale3d(70,70,70);
-        opacity: 1;
+.navbar{
+    background-color: $primaryColor;
+    color:white;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 2;
+    width: 100%;
+    height: 50px;
+}
+.menuIcon {
+    text-align: right;
+    i{
+        padding: .5rem;
+        font-size: 1.5rem;
     }
 }
+.bigScreen{
+    display:none;
+}
+.mobile .menuList{
+    display: none;
+    background-color: $primaryColor;
+}
+.menuList li{
+    padding: .5rem;
+    transition:.3s  cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.menuList li:hover{
+    background-color: darken($color: $primaryColor, $amount: 10%);
+}
+.show{
+    display:block !important;
+}
+/*--------------Side Bar------------------*/
+.sideBar{
+    z-index:3;
+    position: absolute;   
+    top:.5rem;
+    margin-left: 5%;
+    color: white;
+    ul {
+        
+        display: flex;
+        height: 30px;
+        // flex-direction: column;
+        align-items: center;
+        
+       
+    }
+    ul li{
+        width: 30px;
+        padding:.25rem 0;
+        list-style: none;
+        cursor: pointer;
+    }
+    ul li:nth-child(1) {
+        background-color: #64c0e9;  
+
+    }
+    
+    ul li:nth-child(2) {
+        background-color: #f8a01a;
+    }
+    #logo{
+        padding: 0;
+    }
+    #logo img{
+        width:100%;
+    }
+
+}
+   
 /*------------------Main ----------------*/
 main{
     width: 100%;
     margin: 1rem auto;
    
 }
-section{
-    margin: 0 auto;
-    padding: 1rem 0;
-}
-section:first-child{    
-    background-color: lighten($color: $primaryColor, $amount: 20%);
-}
-section:nth-child(2){
-    background-color: lighten($color: $primaryColor, $amount: 10%);
-}
-.container p{
-    width:90%;
-    margin: .5rem auto;
-}
-.container figure{
-    width: 100%;
-    margin: .5rem auto;
-    img{
-        width:100%;
-    }
-}
+
 
 
 /*-------------MATERIALS---------------*/
-.teachWhat .mainType{
-    width: 80%;
-}
-.material ul li{
-    list-style: none;
-}
-.material ul{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
 
 
 
 /*--------------Footer-----------------*/
-footer{
-    margin-top:10rem;
-    padding: .3rem;
-    position: relative;
-    clear:both;
-    bottom:0;
-
-    ul li{
-        display: inline-block;
+footer {
+    text-align: left;
+    figure:nth-child(1){
+        display: none;
     }
-
+    figure img{
+        width: 100%;
+    }
+    ul{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        background-color: $primaryColor;
+    }
+    ul li{
+        list-style: none;
+        font-size:.3rem;
+        color:rgb(226, 224, 224);
+    }
     ul li:nth-child(1){
-        position: absolute;
-        left: 2%;
+        padding-left:2%;
     }
     ul li:nth-child(2){
-        position: absolute;
-        right: 2%;
+        text-align: right;
+        padding-right: 2%;
     }
-    
 }
