--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -4,7 +4,7 @@
     margin-right: 0;
     ul {
         flex-direction: column;
-       
+        overflow: visible;
     }
     ul li{
         width: 110px;
