--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -75,7 +75,7 @@ header{
         height: 30px;
         // flex-direction: column;
         align-items: center;
-        
+        overflow: hidden;
        
     }
     ul li{
