--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -30,7 +30,7 @@ header{
 /*-----------NAV-----------------*/
 .navbar{
     background-color: $primaryColor;
-    color:white;
+    color:#404d0b;
     position: fixed;
     top:0;
     left:0;
@@ -100,12 +100,33 @@ header{
     }
 
 }
+/*-----------------SLIDER---------------*/
+div.slider{
+    margin-top:2.5rem;
+    height: 25vh;
+    background-color: silver;
+}
+
+.slider figure{
+    width:100%;
+    position: relative;
+    margin: 1rem 0;
+    left: 0;
    
+}
+.slider figure img{
+    width: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    display: block;
+    transition: 9s ease-in-out;
+}   
 /*------------------Main ----------------*/
 main{
     width: 100%;
-    margin: 1rem auto;
-   
+    margin: 1rem 0;
+   height: 200px;
 }
 
 
@@ -117,27 +138,28 @@ main{
 /*--------------Footer-----------------*/
 footer {
     text-align: left;
+    background-color: $primaryColor;
     figure:nth-child(1){
-        display: none;
+        display: none;/*this pic for bigger screen*/
     }
     figure img{
         width: 100%;
     }
     ul{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        background-color: $primaryColor;
+       margin: .5rem 2%; 
+       
     }
     ul li{
         list-style: none;
-        font-size:.3rem;
-        color:rgb(226, 224, 224);
+        font-size:.7rem;
+        color:#404d0b;
     }
-    ul li:nth-child(1){
-        padding-left:2%;
+    ul li i{
+        margin: 2%;
+        font-size: 1rem;
     }
-    ul li:nth-child(2){
-        text-align: right;
-        padding-right: 2%;
+    p{
+        font-size:.25rem;
     }
+   
 }
