--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ header .banner img {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
   height: 50px; }
 
@@ -153,36 +153,25 @@ header .banner img {
   display: block !important; }
 
 /*--------------Side Bar------------------*/
-.sideBar {
-  z-index: 3;
+.location {
+  clear: both;
+  z-index: 2;
   position: absolute;
-  top: .5rem;
-  margin-left: 5%;
-  color: white; }
-  .sideBar ul {
-    display: flex;
-    height: 30px;
-    align-items: center;
-    overflow: hidden; }
-  .sideBar ul li {
-    width: 30px;
-    padding: .25rem 0;
-    list-style: none;
-    cursor: pointer; }
-  .sideBar ul li:nth-child(1) {
-    background-color: #64c0e9; }
-  .sideBar ul li:nth-child(2) {
-    background-color: #f8a01a; }
-  .sideBar #logo {
-    padding: 0; }
-  .sideBar #logo img {
-    width: 100%; }
+  right: 0;
+  background-color: orange;
+  width: 50px;
+  height: 25px; }
+  .location i {
+    color: white;
+    padding: 3px 0;
+    margin-left: 15px; }
 
 /*-----------------SLIDER---------------*/
 div.slider {
   margin-top: 2.5rem;
   height: 25vh;
-  background-color: silver; }
+  background-color: silver;
+  position: relative; }
 
 .slider figure {
   width: 100%;
@@ -196,7 +185,19 @@ div.slider {
   top: 0;
   left: 0;
   display: block;
-  transition: 9s ease-in-out; }
+  transition: 3s ease-in-out; }
+
+.slider::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  background-image: url("../images/logo.jpg");
+  background-position: center;
+  background-size: cover;
+  z-index: 2; }
 
 /*------------------Main ----------------*/
 main {
@@ -206,6 +207,9 @@ main {
 
 /*-------------MATERIALS---------------*/
 /*--------------Footer-----------------*/
+@keyframes changeColor {
+  100% {
+    color: #768633; } }
 footer {
   text-align: left;
   background-color: #b3d334; }
@@ -220,13 +224,23 @@ footer {
     list-style: none;
     font-size: .7rem;
     color: #404d0b; }
+  footer ul li a {
+    text-decoration: none;
+    color: #404d0b; }
   footer ul li i {
     margin: 2%;
-    font-size: 1rem; }
+    font-size: 1rem;
+    transition: .2s; }
+  footer ul li:first-child i {
+    animation: changeColor 2s infinite; }
   footer p {
-    font-size: .25rem; }
+    font-size: .5rem;
+    margin-right: 2%;
+    text-align: right;
+    color: gray; }
 
-@media only screen and (min-width: 35rem) {
+/*end media query*/
+@media only screen and (min-width: 60rem) {
   /*================ HEADER ================*/
   header {
     position: relative; }
@@ -246,27 +260,5 @@ footer {
       cursor: pointer;
       align-items: center; }
     .bigScreen ul li:hover {
-      background-color: #93ae26; }
-
-  .sideBar {
-    margin-right: 2%;
-    right: 0; }
-
-  /*================ FOOTER ================*/
-  footer figure:nth-child(1) {
-    display: block; }
-  footer figure:nth-child(2) {
-    display: none; } }
-/*end media query*/
-@media only screen and (min-width: 60rem) {
-  .sideBar {
-    top: -49.7px;
-    right: 0;
-    margin-right: 0; }
-    .sideBar ul {
-      flex-direction: column;
-      overflow: visible; }
-    .sideBar ul li {
-      width: 110px;
-      padding: .75rem 0; } }
+      background-color: #93ae26; } }
 /*end media query*/
