--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -34,7 +34,7 @@ header{
     position: fixed;
     top:0;
     left:0;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 50px;
 }
@@ -63,48 +63,27 @@ header{
     display:block !important;
 }
 /*--------------Side Bar------------------*/
-.sideBar{
-    z-index:3;
-    position: absolute;   
-    top:.5rem;
-    margin-left: 5%;
-    color: white;
-    ul {
-        
-        display: flex;
-        height: 30px;
-        // flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-       
-    }
-    ul li{
-        width: 30px;
-        padding:.25rem 0;
-        list-style: none;
-        cursor: pointer;
-    }
-    ul li:nth-child(1) {
-        background-color: #64c0e9;  
+.location{
+    clear:both;
+    z-index: 2;
+    position: absolute;
+    right: 0;
+   background-color: orange;
+   width: 50px;
+   height: 25px;
 
-    }
-    
-    ul li:nth-child(2) {
-        background-color: #f8a01a;
-    }
-    #logo{
-        padding: 0;
-    }
-    #logo img{
-        width:100%;
-    }
-
+   i{
+       color:white;
+       padding: 3px 0;
+       margin-left: 15px;
+   }
 }
 /*-----------------SLIDER---------------*/
 div.slider{
     margin-top:2.5rem;
     height: 25vh;
     background-color: silver;
+    position: relative;
 }
 
 .slider figure{
@@ -120,8 +99,20 @@ div.slider{
     top:0;
     left: 0;
     display: block;
-    transition: 9s ease-in-out;
+    transition: 3s ease-in-out;
 }   
+.slider::before{
+    content:'';
+    position: absolute;
+    top:0;
+    left:0;
+    height: 50px;
+    width: 50px;
+    background-image: url('../images/logo.jpg');
+    background-position: center;
+    background-size: cover;
+    z-index:2;
+}
 /*------------------Main ----------------*/
 main{
     width: 100%;
@@ -136,6 +127,9 @@ main{
 
 
 /*--------------Footer-----------------*/
+@keyframes changeColor{
+    100%{color:#768633;}
+}
 footer {
     text-align: left;
     background-color: $primaryColor;
@@ -154,12 +148,24 @@ footer {
         font-size:.7rem;
         color:#404d0b;
     }
+    ul li a{
+        text-decoration: none;
+        color: #404d0b;
+    }
     ul li i{
         margin: 2%;
         font-size: 1rem;
+        transition: .2s;
+        
+    }
+    ul li:first-child i{
+        animation: changeColor 2s infinite;
     }
     p{
-        font-size:.25rem;
+        font-size:.5rem;
+        margin-right: 2%;
+        text-align: right;
+        color:gray;
     }
    
 }
