--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ header .banner img {
 
 /*-----------------SLIDER---------------*/
 div.slider {
-  margin-top: 2.5rem;
+  margin-top: 50px;
   height: 25vh;
   background-color: silver;
   position: relative; }
