--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -80,7 +80,7 @@ header{
 }
 /*-----------------SLIDER---------------*/
 div.slider{
-    margin-top:2.5rem;
+    margin-top:50px;
     height: 25vh;
     background-color: silver;
     position: relative;
