--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,10 @@ header .banner img {
   display: none;
   background-color: #b3d334; }
 
+.menuList a {
+  text-decoration: none;
+  color: #404d0b; }
+
 .menuList li {
   padding: .5rem;
   transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1); }
@@ -151,6 +155,9 @@ header .banner img {
 
 .show {
   display: block !important; }
+
+.actived {
+  color: red !important; }
 
 /*--------------Side Bar------------------*/
 .location {
@@ -202,8 +209,17 @@ div.slider {
 /*------------------Main ----------------*/
 main {
   width: 100%;
-  margin: 1rem 0;
-  height: 200px; }
+  margin: 7rem 0 1rem 0;
+  font-family: 'Dancing Script', cursive;
+  line-height: 1.2rem; }
+
+.gioiThieu {
+  padding: .5rem; }
+  .gioiThieu .follows {
+    margin: 1rem 0 .5rem 0; }
+  .gioiThieu .follows figure img {
+    margin: .5rem;
+    width: 15%; }
 
 /*-------------MATERIALS---------------*/
 /*--------------Footer-----------------*/
@@ -255,6 +271,9 @@ footer {
     .bigScreen ul {
       display: flex;
       justify-content: space-around; }
+    .bigScreen ul a {
+      text-decoration: none;
+      color: #404d0b; }
     .bigScreen ul li {
       padding: .7rem .5rem;
       cursor: pointer;
