--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $primaryColor: #b3d334;
 $secondaryColor: #fa7c92;
 $yellowColor:#fff7c0;
-$fontColor: whitesmoke;
+$fontColor: #404d0b;
 
 
 $defaultFont: 'Muli', sans-serif;
