--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -13,6 +13,10 @@ header {
         display: flex;
         justify-content: space-around;
     }
+    ul a{
+        text-decoration: none;
+        color: $fontColor;
+    }
     ul li{
         padding:.7rem .5rem;
         cursor: pointer;
