--- a/css/styles.css
+++ b/css/styles.css
@@ -211,15 +211,18 @@ main {
   width: 100%;
   margin: 7rem 0 1rem 0;
   font-family: 'Dancing Script', cursive;
-  line-height: 1.2rem; }
+  font-size: 1.1rem;
+  line-height: 1.5rem; }
 
-.gioiThieu {
-  padding: .5rem; }
-  .gioiThieu .follows {
-    margin: 1rem 0 .5rem 0; }
-  .gioiThieu .follows figure img {
-    margin: .5rem;
-    width: 15%; }
+.gioiThieu .content {
+  padding: .5rem 1rem; }
+.gioiThieu .content div {
+  padding: .5rem 0; }
+.gioiThieu .follows {
+  margin: 1rem 0 .5rem 0; }
+.gioiThieu .follows figure img {
+  margin: .5rem;
+  width: 15%; }
 
 /*-------------MATERIALS---------------*/
 /*--------------Footer-----------------*/
