--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -89,7 +89,7 @@ header{
 div.slider{
     margin-top:50px;
     height: 20vh;
-    background-color: silver;
+    // background-color: silver;
     position: relative;
 }
 
