--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@ $yellowColor:#fff7c0;
 $fontColor: #404d0b;
 
 
-$defaultFont: 'Muli', sans-serif;
+$defaultFont: 'Nunito', sans-serif;
 $boldWeight: 900;
 $medWeight:700;
 $normalWeight:400;
