--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,8 @@ header .banner img {
   height: 50px; }
 
 .menuIcon {
-  text-align: right; }
+  text-align: right;
+  cursor: pointer; }
   .menuIcon i {
     padding: .5rem;
     font-size: 1.5rem; }
@@ -156,8 +157,8 @@ header .banner img {
 .show {
   display: block !important; }
 
-.actived {
-  color: red !important; }
+.actived li {
+  background-color: rgba(248, 160, 26, 0.8) !important; }
 
 /*--------------Side Bar------------------*/
 .location {
@@ -177,7 +178,7 @@ header .banner img {
 div.slider {
   margin-top: 50px;
   overflow: hidden;
-  height: 200px;
+  height: 50vh;
   position: relative; }
 
 .slider figure {
@@ -209,20 +210,56 @@ div.slider {
 /*------------------Main ----------------*/
 main {
   width: 100%;
-  margin: 5rem 0 1rem 0;
+  margin: 1rem 0 1rem 0;
   font-size: 1.1rem;
   line-height: 1.5rem; }
 
-.gioiThieu .content {
-  padding: .5rem 1rem;
-  height: 500px; }
-.gioiThieu .content div {
-  padding: .5rem 0; }
-.gioiThieu .follows {
-  margin: 1rem 0 .5rem 0; }
-.gioiThieu .follows figure img {
-  margin: .5rem;
-  width: 15%; }
+.gioiThieu {
+  font-size: .8rem; }
+  .gioiThieu .content {
+    padding: .5rem 1rem;
+    height: auto;
+    text-align: left; }
+  .gioiThieu .content h2 {
+    font-size: .9rem; }
+  .gioiThieu .content {
+    padding: .7rem;
+    border: 0.1rem solid white;
+    border-radius: 15px; }
+  .gioiThieu .wrapper {
+    background-size: cover;
+    background-repeat: none;
+    border-radius: 20px;
+    border: 1px solid white;
+    box-shadow: 3px 3px 3px gray; }
+  .gioiThieu .forWhom .wrapper {
+    background-image: url("../images/slideshow/glarus_s.jpg"); }
+  .gioiThieu .montessori .wrapper {
+    background-image: url("../images/slideshow/beautifulLanscape.jpg"); }
+  .gioiThieu .curriculum .wrapper {
+    background-image: url("../images/slideshow/nature-wallpapers-8.jpg"); }
+  .gioiThieu .wrapper div {
+    width: 80%;
+    margin: 1rem auto;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: .5rem; }
+  .gioiThieu .follows {
+    margin: 1rem 0 .5rem 0; }
+  .gioiThieu .follows figure img {
+    margin: .5rem;
+    width: 15%; }
+
+/*--------FOR WHOM -------------------*/
+.forWhom-info {
+  font-size: .8rem;
+  width: 80%;
+  margin: 0 auto; }
+  .forWhom-info h1 {
+    font-size: 1.1rem; }
+  .forWhom-info figure img {
+    width: 90%; }
+  .forWhom-info .info {
+    margin: 2rem 0; }
 
 /*-------------MATERIALS---------------*/
 /*--------------Footer-----------------*/
@@ -293,7 +330,18 @@ footer {
     margin: 1rem 0 .5rem 0; }
   .gioiThieu .follows figure img {
     margin: 1rem;
-    width: 10%; } }
+    width: 10%; }
+
+  /*----------FOR WHOM----------*/
+  .forWhom-info {
+    width: 90%; }
+    .forWhom-info .info {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      align-items: center;
+      grid-column-gap: .5rem; }
+    .forWhom-info figure img {
+      width: 100%; } }
 /*end media query*/
 @media only screen and (min-width: 60rem) {
   /*================ HEADER ================*/
