--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,7 @@ main {
 /*--------------Footer-----------------*/
 @keyframes changeColor {
   100% {
-    color: #768633; } }
+    color: #f8a01a; } }
 footer {
   text-align: left;
   background-color: #b3d334; }
