--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -200,7 +200,7 @@ main{
 
 /*--------------Footer-----------------*/
 @keyframes changeColor{
-    100%{color:#768633;}
+    100%{color:$secondaryColor;}
 }
 footer {
     
