--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -233,7 +233,7 @@ footer {
         margin: 2%;
         font-size: 1rem;
         transition: .2s;
-        
+        color:#404d0b;
     }
     ul li:first-child i{
         animation: changeColor 2s infinite;
