--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -15,34 +15,34 @@
 }
 /*---------------Slider---------------------*/
 div.slider{
-    height: 400px;
+    height: 480px;
   
 }
 /*-----------------Main -------------------*/
 main{
     width: 100%;
-    margin: 10rem 0 1rem 0;
+    margin: 5rem 0 1rem 0;
    font-size:1.2rem;
    line-height: 1.6rem;
    color: red;
 }
-.gioiThieu{
+// .gioiThieu{
   
-    .content{
-       padding: .5rem 1rem;
-       height: 500px;
-    }
-    .content div{
-        padding: .5rem 0;
-    }
-    .follows{
-        margin:1rem 0 .5rem 0;
-    }
-    .follows figure img{
-        margin: 1rem;
-        width:10%;
-    }
-}
+//     .content{
+//        padding: .5rem 1rem;
+//        height: 500px;
+//     }
+//     .content div{
+//         padding: .5rem 0;
+//     }
+//     .follows{
+//         margin:1rem 0 .5rem 0;
+//     }
+//     .follows figure img{
+//         margin: 1rem;
+//         width:10%;
+//     }
+// }
 /*----------FOR WHOM----------*/
 .forWhom-info{
     width: 90%;
